# LLM_Token_Futures_Market

./: .gitignore  package-lock.json  package.json
app/src/: devnetConfig.ts
escrow-api/: main.py
escrow-api/escrow/: Anchor.toml  README.md  package-lock.json
escrow-api/escrow/programs/escrow/: Cargo.toml
escrow-api/escrow/programs/escrow/src/: lib.rs
escrow-api/escrow/programs/escrow/src/dot/: program.rs
escrow-api/escrow/programs_py/: escrow.py
escrow-api/escrow/scripts/: demo.sh  interact.ts
escrow-api/escrow/tests/: escrow.ts
oracle/: tsconfig.json
oracle/oracle/snapshots/: snapshot-1779815718408.json
oracle/src/: cli-post-price.ts
oracle/test/: parser.test.ts
programs/llm_token_futures/src/: error.rs
settlement/src/: pnl.ts  price.ts  settle.ts
settlement/test/: margin.test.ts
v1/: Anchor.toml  Cargo.toml  MVP.md  README.md  testing.txt
v1/app/: index.html  package.json  vite.config.ts
v1/app/src/: App.tsx  main.tsx  styles.css  wallet.tsx
v1/oracle/: package.json
v1/oracle/src/: cli-snapshot.ts  fetch.ts  parser.ts
v1/oracle/test/fixtures/: pricing-snippet.md
v1/programs/llm_token_futures/: Cargo.toml
v1/scripts/: deploy-devnet.ts
v1/settlement/: README.md  package-lock.json  package.json  tsconfig.json
v1/settlement/scripts/: demo.ts
v1/settlement/src/: constants.ts  index.ts  margin.ts  types.ts
v1/settlement/test/: pnl.test.ts  settle.test.ts
v2/: notes.txt
v2/test-escrow/: Anchor.toml  package-lock.json
v2/test-escrow/client/: Cargo.toml
v2/test-escrow/tests/: test-escrow.ts
(+27 files in other folders)
